[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duet-c4-f4"
version = "0.1.0"
description = "C4 & F4 duet: generate, gate (with delay),  mix, and plot."
authors = [{ name = "Sebas Willemse", email = "sfwillemse@tudelft.nl"}]
dependencies = ["numpy>=1.2", "matplotlib>=3.7"]

